--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "attendee-mcp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Meeting Bot MCP Server for recording and transcribing meetings",
   "type": "module",
   "main": "dist/index.js",
@@ -27,20 +27,24 @@
   "author": "Rex Posadas",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/node-fetch": "^2.6.9",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.0"
+    "@types/node": "^20.19.0",
+    "@types/node-fetch": "^2.6.12",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "files": [
     "dist/**/*",
-    "README.md"
-  ]
+    "README.md",
+    "CONFIGURATION.md",
+    "examples.js",
+    "test-mcp.js"
+  ],
+  "types": "./dist/index.d.ts"
 }
